--- a/src/app/Content/subject/subject-and-behvior-subject/subject-and-behvior-subject.component.html
+++ b/src/app/Content/subject/subject-and-behvior-subject/subject-and-behvior-subject.component.html
@@ -15,3 +15,13 @@
         <app-comp3></app-comp3>
     </div>
 </div>
+<hr>
+<h3 class="text-danger">Practice:</h3>
+<h4>Username is <span class="text-primary">{{uname_practice}}</span></h4>
+<hr>
+<br>
+<div class="row">
+    <div class="col-md-4">
+        <app-comp4></app-comp4>
+    </div>    
+</div>
