--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,7 +6,8 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <span class="badge text-bg-info" *ngIf="exclusive">Exclusive</span>
-
+        <span class="badge text-bg-warning" *ngIf="observables">Observables</span>
+        <span class="badge text-bg-danger" *ngIf="promises">Promises</span>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
